--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nauta-connect",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Extensión para conectarse a la red Nauta de ETECSA de forma rápida, fácil y segura.",
   "license": "MIT",
   "keywords": [
@@ -11,67 +11,54 @@
     "wifi",
     "conectarse"
   ],
-  "esversion": 6,
   "scripts": {
     "build": "node utils/build.js",
     "start": "node utils/webserver.js",
     "prettier": "prettier --write '**/*.{js,jsx,css,html}'"
   },
   "dependencies": {
-    "@hot-loader/react-dom": "^16.13.0",
-    "@material-ui/core": "^4.10.2",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "cheerio": "^1.0.0-rc.3",
-    "crypto-js": "^4.0.0",
-    "fontsource-roboto": "^2.1.4",
-    "formik": "^2.1.4",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.4",
-    "react": "^16.13.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/lab": "^5.0.0",
+    "@mui/material": "^5.16.7",
+    "cheerio": "^1.0.0-rc.12",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.10",
+    "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
+    "react": "^18.3.1",
     "react-chrome-redux": "^2.0.0-alpha.5",
-    "react-countdown": "^2.2.1",
-    "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.20",
-    "react-redux": "^7.2.0",
-    "react-scripts": "^5.0.1",
-    "react-share": "^4.2.0",
+    "react-countdown": "^2.3.5",
+    "react-dom": "^18.3.1",
+    "react-hot-loader": "^4.13.1",
+    "react-redux": "^9.1.2",
+    "react-share": "^5.0.1",
     "react-timecode": "^1.1.23",
     "react-timer-wrapper": "^0.4.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "typeface-roboto": "^0.0.75",
-    "yup": "^0.29.1"
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-react": "^7.9.4",
-    "@types/chrome": "0.0.104",
-    "@types/react": "^16.9.26",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-preset-react-app": "^9.1.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.5.3",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-flowtype": "^4.7.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "file-loader": "^6.0.0",
-    "fs-extra": "^9.0.0",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "^4.0.2",
-    "prettier": "^2.0.2",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
+    "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@types/chrome": "^0.0.246",
+    "@types/react": "^18.3.3",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "eslint": "^8.57.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "prettier": "^3.3.3",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
     "write-file-webpack-plugin": "^4.5.1"
   }
 }
