--- a/package.json
+++ b/package.json
@@ -17,48 +17,54 @@
     "prettier": "prettier --write '**/*.{js,jsx,css,html}'"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/lab": "^5.0.0",
-    "@mui/material": "^5.16.7",
-    "cheerio": "^1.0.0-rc.12",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.9",
+    "@mui/icons-material": "^6.5.0",
+    "@mui/lab": "^7.0.0",
+    "@mui/material": "^6.5.0",
+    "@mui/styles": "^6.4.8",
+    "cheerio": "^1.2.0",
     "crypto-js": "^4.2.0",
-    "dayjs": "^1.11.10",
-    "formik": "^2.4.6",
-    "jsonwebtoken": "^9.0.2",
+    "dayjs": "^1.11.19",
+    "formik": "^2.4.9",
+    "fs-extra": "^11.3.3",
+    "jsonwebtoken": "^9.0.3",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-chrome-redux": "^2.0.0-alpha.5",
-    "react-countdown": "^2.3.5",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
-    "react-hot-loader": "^4.13.1",
-    "react-redux": "^9.1.2",
-    "react-share": "^5.0.1",
-    "react-timecode": "^1.1.23",
-    "react-timer-wrapper": "^0.4.0",
+    "react-redux": "^9.2.0",
+    "react-share": "^5.2.2",
+    "react-timecode": "^1.3.0",
+    "react-timer-wrapper": "^0.4.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "yup": "^1.4.0"
+    "yup": "^1.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/preset-react": "^7.24.7",
-    "@types/chrome": "^0.0.246",
-    "@types/react": "^18.3.3",
-    "babel-loader": "^9.1.3",
+    "@babel/core": "^7.29.0",
+    "@babel/plugin-transform-class-properties": "^7.28.6",
+    "@babel/preset-env": "^7.29.0",
+    "@babel/preset-react": "^7.28.5",
+    "@types/chrome": "^0.1.36",
+    "@types/react": "^18.3.28",
+    "babel-loader": "^9.2.1",
+    "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^7.1.2",
-    "eslint": "^8.57.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.3",
-    "prettier": "^3.3.3",
+    "copy-webpack-plugin": "^13.0.1",
+    "crypto-browserify": "^3.12.1",
+    "css-loader": "^7.1.3",
+    "eslint": "^9.39.2",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.6",
+    "prettier": "^3.8.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^4.0.0",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "write-file-webpack-plugin": "^4.5.1"
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2",
+    "webpack": "^5.105.2",
+    "webpack-cli": "^5.1.4"
   }
 }
